# llmops-multi-agents

./: .dockerignore  .gitignore  Jenkinsfile  README.md
src/: README.md
src/agents/orchestrator-agent/: .dockerignore  .env.example  Dockerfile  README.md  __main__.py  a2a_client.py  agent.py  config.py  main.py  pyproject.toml  redis_memory.py  requirements.txt  root_prompt.py  start.py  system_prompt.py  test_simple.py
src/agents/rag-agent/: .env.example  Dockerfile  README.md  __main__.py  a2a_client.py  agent.py  agent_executor.py  config.py  main.py  pyproject.toml  requirements.txt  system_prompt.py  test_rag_agent.py
src/data-preparing/: .env.example  README.md  config.py  ingest_data.py  pyproject.toml
src/data-preparing/benchmarks/embedding/: README.md  config.py  hit_at_k_benchmark.py  pyproject.toml  sts_correlation_benchmark.py
src/data-preparing/benchmarks/embedding/results/: hit_at_k_benchmark_results.json  hit_at_k_benchmark_summary.csv  sts_correlation_benchmark_results.json  sts_correlation_benchmark_summary.csv
src/data-preparing/utils/: __init__.py  embedding_manager.py  pdf_processor.py  qdrant_manager.py
src/evaluation/: build_eval_dataset.py  config.py  eval.ipynb  eval_dataset.json  eval_rag.ipynb  evaluate_rag.py  pyproject.toml  raw_qa.txt
src/indexing/: 01_extract_text.py  02_embed_and_store.py  requirements.txt
