[project]
name = "data-preparing"
version = "0.1.0"
description = "Data Ingestion and Preparation for Mental Health RAG System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "qdrant-client>=1.7.0",
    "PyPDF2>=3.0.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "langchain>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "scikit-learn>=1.3.0",
    "tiktoken>=0.5.0",
    "transformers>=4.30.0",
    "regex>=2023.0.0",
    "unicodedata2>=15.0.0",
    "rank-bm25>=0.2.2"
]

[tool.uv.workspace]
members = [
    "data-preparing",
]
