[project]
name = "orchestrator-agent"
version = "0.1.0"
description = "Orchestrator Agent A2A"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # A2A Protocol
    "a2a-sdk>=0.3.7",
    
    "python-dotenv>=1.0.0",

    # LangChain
    "langchain>=0.1.0",
    "langchain-google-genai==2.1.9",

    "uvicorn>=0.35.0",
    "pydantic>=2.11.5",
    "fastapi>=0.118.0",
    "redis>=6.3.0",
    "httpx>=0.25",
]

[tool.uv.workspace]
members = [
    "orchestrator-agent",
]
