[project]
name = "embedding-benchmarks"
version = "0.1.0"
description = "Embedding benchmarks for Vietnamese and multilingual models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "tokenizers>=0.13.0",
    "huggingface-hub>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.uv.workspace]
members = [
    "embedding-benchmarks",
]
